--- a/style.css
+++ b/style.css
@@ -1,24 +1,23 @@
 
-body {
-    background: radial-gradient(200% 100% at bottom center,#dcf3f1, #9a5b6d, #1b294793, #1b2947);
-    background: radial-gradient(220% 105% at top center, #1b2947 10%, #75517d 40%, #ca95a4 65%, #1b2947);
-    background-attachment: fixed;
-    overflow: hidden;
-  }
-  
-  @keyframes rotate {
-    0% {
-      transform: perspective(400px) rotateZ(20deg) rotateX(-40deg) rotateY(0);
-    }
-    100% {
-      transform: perspective(400px) rotateZ(20deg) rotateX(-40deg) rotateY(-360deg);
-    }
-  }
 
 
 * {
     margin: 0;
     padding: 0;
+}
+.video-bg {
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+
+ 
+}
+.video-bg video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 ul {
     list-style: none;
